[gd_scene load_steps=3 format=3 uid="uid://bwvcrvsm8mibt"]

[ext_resource type="Script" path="res://ui/InputBox.gd" id="1_3r0kw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kcesp"]

[node name="InputBox" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3r0kw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="TextBox" type="TextEdit" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_kcesp")
placeholder_text = "Waiting for input...
Use /help to see commands."
wrap_mode = 1
caret_blink = true

[node name="SendButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Send"
